--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -8,12 +8,14 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Install dependencies
-      run: lein deps
+    - uses: actions/checkout@latest
+    - uses: DeLaGuardo/setup-graalvm@3.1
+      with:
+        graalvm-version: '21.0.0.java11'
+    - uses: DeLaGuardo/setup-clojure@master
+      with:
+        lein: 2.9.5
     - name: Run tests
       run: lein test
