--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -10,13 +10,24 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: DeLaGuardo/setup-graalvm@3.1
+    - uses: actions/checkout@v3
+    - uses: actions/setup-java@v3
       with:
-        graalvm-version: '21.0.0.java11'
-    - uses: DeLaGuardo/setup-clojure@master
+        distribution: 'temurin' # See 'Supported distributions' for available options
+        java-version: '17'
+    - uses: DeLaGuardo/setup-clojure@11.0
       with:
-        lein: 2.9.8
+        lein: 'latest'
+    - name: Cache clojure dependencies
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.m2/repository
+          ~/.gitlibs
+          ~/.deps.clj
+        # List all files containing dependencies:
+        key: cljdeps-${{ hashFiles('project.clj') }}
+        restore-keys: cljdeps-
     - name: Install modules
       run: cd http3; lein install
     - name: Run tests
