--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -19,6 +19,7 @@ jobs:
       with:
         lein: 'latest'
         cljfmt: 'latest'
+        clj-kondo: 'latest'
     - name: Cache clojure dependencies
       uses: actions/cache@v3
       with:
@@ -37,6 +38,15 @@ jobs:
         popd
         pushd http2
         cljfmt check
+        popd
+    - name: lint
+      run: |
+        clj-kondo --lint src
+        pushd http3
+        clj-kondo --lint src
+        popd
+        pushd http2
+        clj-kondo --lint src
         popd
     - name: Install http2
       run: |
